syntax = "proto3";

package m8s;

service m8s {
    rpc Create (CreateRequest) returns (stream CreateResponse) {}
    rpc Exec (ExecRequest) returns (stream ExecResponse) {}
    rpc Describe (DescribeRequest) returns (DescribeResponse) {}
    rpc List (ListRequest) returns (ListResponse) {}

    // Used for getting Docker registry secrets.
    rpc DockerCfg (DockerCfgRequest) returns (DockerCfgResponse) {}
}

// Credentials is used for authenicating with the PR service.
message Credentials {
    string Token = 1;
}

// BuildRequest is used for submitting a new build.
message CreateRequest {
    Credentials Credentials = 1;
    Metadata Metadata = 2;
    Compose Compose = 3;
    GitCheckout GitCheckout = 4;
}

// Metadata is high level information about the build.
message Metadata {
  string Name = 2;
  repeated string Domains = 3;
  BasicAuth BasicAuth = 4;
}

message BasicAuth {
    string User = 1;
    string Pass = 2;
}

// GitCheckout is the details required to checkout the codebase.
message GitCheckout {
    // The repository we are cloning:
    // * https://github.com/owner/repo.git
    // * https://<token>:x-oauth-basic@github.com/owner/repo.git
    string Repository = 1;
    string Revision = 2;
}

// Compose is our environment data, marshalled from a docker compose file.
message Compose {
  repeated ComposeService Services = 1;
}

// ComposeService is a container defintion, which we will use to build a pod.
message ComposeService {
    string Name = 1;
    string Image = 2;
    Resource Limits = 3;
    Resource Reservations = 4;
    repeated string Volumes = 5;
    repeated string Ports = 6;
    repeated string Environment = 7;
    repeated string Tmpfs = 8;
}

// Resource is used for setting CPU and Memory of the build.
message Resource {
    string CPU = 1;
    string Memory = 2;
}

// BuildResponse is a streamed response used for printing build output and status.
message CreateResponse {
  string Message = 1;
}

// ExecRequest is our command being send to the remote environment.
message ExecRequest {
    Credentials Credentials = 1;
    string Name = 2;
    string Container = 3;
    string Command = 4;
}

// ExecResponse is a streamed response used to return output from the commands on the remove environment.
message ExecResponse {
    string Message = 1;
}

// DescribeRequest asks for an Environment which has already been deployed.
message DescribeRequest {
    Credentials Credentials = 1;
    string Name = 2;
}

// DescribeResponse responds with an Environment.
message DescribeResponse {
    string Namespace = 1;
    string Name = 2;
    repeated string Domains = 3;
    repeated string Containers = 4;
    repeated string SSH = 5;
}

// DescribeRequest asks for all the Environments.
message ListRequest {
    Credentials Credentials = 1;
}

// ListResponse returns a list of Environments.
message ListResponse {
    repeated string Environments = 1;
}

// SSH containers secrets for performing SSH commands on private endpoints.
message SSH {
    bytes KnownHosts = 1;
    bytes PrivateKey = 2;
}

// SetSSHRequest allows for the developer to set SSH secrets "out of band".
message SSHSetRequest {
    Credentials Credentials = 1;
    SSH SSH = 2;
}

// SetSSHResponse is a response after setting SSH.
message SSHSetResponse {}

// SSHGetRequest request for the SSH configuration.
message SSHGetRequest {
    Credentials Credentials = 1;
}

// SSHGetResponse returns the SSH configuration.
message SSHGetResponse {
    SSH SSH = 1;
}

// DockerCfgRequest requests the Docker configuration.
message DockerCfgRequest {
    Credentials Credentials = 1;
}

// DockerCfgResponse returns the Docker configuration.
message DockerCfgResponse {
    string Registry = 1;
    string Username = 2;
    string Password = 3;
    string Email = 4;
    string Auth = 5;
}